[package]
name = "aptos-core-parsers"
description = "Indexer GRPC Parser (Rust)"
version = "0.0.2"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
rust-version = "1.64"

[dependencies]
anyhow = "1.0.62"
# aptos-crash-handler = { workspace = true }
# aptos-indexer-grpc-utils = { workspace = true }
# aptos-logger = { workspace = true }
# aptos-metrics-core = { workspace = true }
# aptos-moving-average = { workspace = true }
# aptos-protos = { workspace = true }
# aptos-runtimes = { workspace = true }
async-trait = "0.1.53"
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "3.2.23", features = ["derive", "env", "suggestions"] }
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
field_count = "0.1.1"
futures = "= 0.3.24"
hex = "0.4.3"
once_cell = "1.10.0"
prost = "0.11.3"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
sha2 = "0.9.3"
tokio = { version = "1.21.0", features = ["full"] }
tonic = { version = "0.8.3", features = [
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
] }
